--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -24,6 +24,9 @@
 #   go-tests = true
 #   unused-packages = true
 
+[metadata.heroku]
+  root-package = "github.com/duongvanha/fanaticsCrawler"
+  go-version = "1.11.1"
 
 [[constraint]]
   name = "github.com/PuerkitoBio/goquery"
